Fixed bug with languages visibility and incorrect styles

--- a/scss/_profile.scss
+++ b/scss/_profile.scss
@@ -399,6 +399,7 @@
             display: none;
             @include tablet-and-up {
                 display: flex;
+                flex-wrap: wrap;
             }
         }
 
@@ -463,7 +464,7 @@
 
         &.profile__label--full {
             width: 100%;
-            margin-left: 50px;
+            margin-left: 49px;
         }
     }
 
